removal of errors general clean up